--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: Sutil/snk@master
         id: snake-gif
         with:
-          github_user_name: ${{ github.repository_EzequiasBR }}
+          github_user_name: ${{ github.EzequiasBR }}
           svg_out_path: dist/github-contribution-grid-snake2.svg
           snake_color: 'blue'
 
